# turbo

./: .gitignore  README.md  pyproject.toml  requirements.txt
deploy/: .env.example  docker-compose.yml
deploy/backend/: Dockerfile
deploy/frontend/: Dockerfile  nginx.conf
deploy/traefik/: dynamic.yml  traefik.yml
rag/: external_system_converter.py
src/: config.py
src/api/: main.py  schemas.py
src/core/: orchestrator.py  pipeline.py
src/db/: base.py  crud.py  models.py
src/ingestion/: preprocessor.py  rag_loader.py
src/llm/: chains.py  client.py
src/outputs/: builder.py  uml.py
src/retrieval/: hybrid.py  utils.py
src/utils/: json_utils.py
ui/: package-lock.json  package.json
ui/src/: App.vue  main.ts  style.css
ui/src/assets/: main.css
ui/src/components/: BftForm.vue  HistoryList.vue  MermaidViewer.vue  RagUploader.vue  ResultViewer.vue
ui/src/pages/: AnalyzerPage.vue  RagPage.vue
ui/src/router/: index.ts
