[project]
name = "bft-semantic-analyzer"
version = "0.1.0"
description = "MVP для семантического анализа БФТ"
dependencies = [
    "fastapi~=0.111.0",
    "uvicorn[standard]~=0.30.0",
    "pydantic~=2.7.0",
    "SQLAlchemy~=2.0.30",
    "alembic~=1.13.1",
    "sqlmodel~=0.0.16",
    "chromadb~=0.4.24",
    "langchain~=0.2.1",
    "langchain-openai~=0.1.8",
    "httpx~=0.27.0",
    "python-dotenv~=1.0.1",
    "tiktoken~=0.7.0",
    "nltk~=3.8.1",
    "spacy~=3.7.4",
    "orjson~=3.10.3"
]

[project.optional-dependencies]
ollama = ["ollama~=0.1.14"]
dev = ["pytest~=8.2.0", "pytest-asyncio~=0.23.6", "ruff~=0.3.7"]

[tool.ruff]
line-length = 100